# authbuffer

./: .clang-format  .gitignore  CMakeLists.txt
helpers/cryptos/: Cargo.toml
helpers/cryptos/src/: main.rs
include/: BufferStore.h  SgxAuthBuffer.h  SgxAuthBuffer.hpp  bridge.h  common.h  merkle.h  segment.h
src/: BufferStore.cc  SgxAuthBuffer.cc  bridge.cc  main.cc  segment.cc
tests/: SgxAuthBufferTests.cc
